add collection framwork